--- a/computer_service/templates/partials/header.html
+++ b/computer_service/templates/partials/header.html
@@ -1,10 +1,15 @@
 <header>
-    <h1>Your Website</h1>
+    <h1>StarNet</h1>
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/service-request/">Service Requests</a></li>
             <li><a href="/invoice/">Invoices</a></li>
+            <li><a href="/part/">Parts</a></li>
+            <li><a href="/service_technician/">Service technicians</a></li>
+            <li><a href="/customer/">Customers</a></li>
+            
+            
             <!-- Add links for other models as needed -->
         </ul>
     </nav>
