Refactor name of aplication and fix bugs

--- a/computerserviceapp/templates/partials/header.html
+++ b/computerserviceapp/templates/partials/header.html
@@ -6,7 +6,7 @@
             <li><a href="/service-request/">Service Requests</a></li>
             <li><a href="/invoice/">Invoices</a></li>
             <li><a href="/part/">Parts</a></li>
-            <li><a href="/service_technician/">Service technicians</a></li>
+            <li><a href="/service-technician/">Service technicians</a></li>
             <li><a href="/customer/">Customers</a></li>
             
             
