Update customer and service technian details html templates

--- a/computerserviceapp/templates/computerserviceapp/details/service_technician_details.html
+++ b/computerserviceapp/templates/computerserviceapp/details/service_technician_details.html
@@ -5,6 +5,8 @@
 {% block content %}
     <h2>{{ technician.name }} {{ technician.surname }} Details</h2>
     <p>Specialization: {{ technician.specialization }}</p>
+    <p>Email: {{ technician.email }}</p>
+    <p>Phone Number: {{ technician.phone_number }}</p>
     <!-- Add more details as needed -->
     <a href="{% url 'service_technician_edit' pk=technician.pk %}">Edit</a>
     <a href="{% url 'service_technician_delete' pk=technician.pk %}">Delete</a>
