--- a/computerserviceapp/templates/computerserviceapp/lists/service_technician_list.html
+++ b/computerserviceapp/templates/computerserviceapp/lists/service_technician_list.html
@@ -9,4 +9,9 @@
             <li><a href="{% url 'service_technician_detail' pk=technician.pk %}">{{ technician.name }} {{ technician.surname }}</a></li>
         {% endfor %}
     </ul>
+    <br><hr>
+    <h2>Add new technician</h2>
+    <p>
+    <a href="{% url 'service_technician_create' %}">Add new</a></p>
+    <br><hr>
 {% endblock %}
