--- a/computerserviceapp/templates/computerserviceapp/delete/service_technician_confirm_delete.html
+++ b/computerserviceapp/templates/computerserviceapp/delete/service_technician_confirm_delete.html
@@ -4,10 +4,10 @@
 
 {% block content %}
     <h2>Confirm Deletion</h2>
-    <p>Are you sure you want to delete {{ technician.name }} {{ technician.surname }}?</p>
-    <form method="post" action="{% url 'service_technician_delete' pk=technician.pk %}">
+    <p>Are you sure you want to delete {{ service_technician.name }} {{ service_technician.surname }}?</p>
+    <form method="post" action="{% url 'service_technician_delete' pk=service_technician.pk %}">
         {% csrf_token %}
         <button type="submit">Delete</button>
     </form>
-    <a href="{% url 'service_technician_detail' pk=technician.pk %}">Cancel</a>
+    <a href="{% url 'service_technician_detail' pk=service_technician.pk %}">Cancel</a>
 {% endblock %}
